--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2 class="about__title">About us</h2>
 
         <div class="about__content container">
-            <img src=".//assets/images/pic1.png" alt="">
+            <img src=".//assets/images/pic1.png" alt="IMG">
             <!-- фото  -->
         
 
